Updating ExchangeRatesClient